# proxies-manager

./: .dockerignore  .editorconfig  .gitignore  .prettierignore  .prettierrc  Dockerfile  README.md  docker-compose.yml  entrypoint  manage.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: release.yml  test.yml
config/: __init__.py  asgi.py  celery.py  gunicorn.py  logging.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  test.py
proxies/proxies/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
proxies/proxies/migrations/: 0001_initial.py  0002_client.py  0003_client_default_proxy.py  0004_proxy_alias.py  0005_alter_client_default_proxy.py
proxies/proxies/services/: auth.py  base.py  digitalocean.py  hetzner.py
proxies/users/: admin.py  apps.py  authentication.py  manager.py  models.py
proxies/users/migrations/: 0001_initial.py
